Change the hero image to an edited version where the cube is moved to the right on the image so there isn't as much empty space. Make the hero image 500px, then change some of the .left-image-text code to make sure it looks good on all devices. Add the old hero background-image once the screen size gets to 480px so that the cube wont be cut out of the screen when looking on a mobile device.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,9 +83,9 @@ a:active {
 
 
 #hero-image {
-    height: 600px;
+    height: 500px;
     width: 100%;
-    background-image: url('../images/cube-hero-image.jpg');
+    background-image: url('../images/cube-hero.png');
     background-repeat: no-repeat;
     background-position: left;
     overflow: hidden;
@@ -146,7 +146,7 @@ a:active {
 /* gallery */
 
 
- #gallery{
+#gallery {
     /* height: 900px; */
     width: 100%;
     background-color: #E6C4E5;
@@ -293,7 +293,7 @@ footer i {
     margin-right: 5px;
 }
 
-footer p{
+footer p {
     margin-top: 5px;
 }
 
@@ -302,23 +302,28 @@ footer p{
 
 
 @media screen and (max-width: 1200px) {
-    
-    .left-image-text{
+
+    .left-image-text {
         font-size: 27px;
         max-width: 35%;
         line-height: 1.5;
 
-}
+    }
 }
 
 @media screen and (max-width: 943px) {
-    
+
     #nav-list {
         clear: left;
         float: left;
-        margin-left: 30px;
+        margin-left: 23px;
         margin-bottom: 20px;
         line-height: 25px;
+    }
+
+    .left-image-text {
+        width: 45%;
+        max-width: 45%;
     }
 
 }
@@ -333,23 +338,31 @@ footer p{
         display: none;
     }
 
-    #gallery img{
+    #gallery img {
         max-width: 150px;
     }
-  
+
+    .left-image-text {
+        max-width: 59%;
+        width: 59%;
+        font-size: 25px;
+    }
+
 
 }
 
 @media screen and (max-width: 480px) {
-    .left-image-text{
+
+    .left-image-text {
         max-width: 100%;
         width: 95%;
         font-size: 18px;
         padding-left: 0px;
-        margin-top: 209px;
+        margin-top: 150px;
     }
 
     #hero-image {
+        background-image: url('../images/cube-hero-image.jpg');
         height: 400px;
     }
 
@@ -358,11 +371,11 @@ footer p{
 
     }
 
-    #nav-list li{
+    #nav-list li {
         letter-spacing: 0px;
     }
 
-    #gallery img{
+    #gallery img {
         max-width: 135px;
     }
 }
